--- a/style.css
+++ b/style.css
@@ -304,6 +304,10 @@ hr {
   color: var(--clr-neutral-100);
 }
 
+.middle-card hr  {
+  background-color: var(--clr-neutral-100);
+}
+
 .middle-card p {
   color: var(--clr-neutral-100);
 }
